--- a/app/fonts.css
+++ b/app/fonts.css
@@ -1,13 +1,5 @@
-/* Inter Variable Font - Single file for all weights */
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 100 900; /* Supports all weights */
-  font-display: swap;
-  src: url("/fonts/inter/Inter-Variable.woff2") format("woff2-variations");
-  unicode-range:
-    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+/* Google Fonts Inter - More reliable for Pi */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 /* Enable tabular numbers globally for Inter */
 .inter-tabular {
