--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 @import '../styles/v3-setup.css';
 @import '../styles/v3-game.css';
 @import '../styles/v3-server-announcement.css';
+@import '../styles/v3-side-swap.css';
 
 /* Keep fonts */
 @import './fonts.css';
