--- a/styles/layouts.css
+++ b/styles/layouts.css
@@ -161,14 +161,14 @@
   position: relative;
 }
 
-/* Selected state (pink - TESTING) */
+/* Selected state (green) */
 .tile.selected {
-  background-color: #FF1493;
+  background-color: #04CA95;
 }
 
 /* Team colors */
 .tile.team-1 {
-  background-color: #FF1493;
+  background-color: #04CA95;
 }
 
 .tile.team-2 {
