--- a/styles/court.css
+++ b/styles/court.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--color-bg-dark);
-    background-image: url('/images/court.png');
+    background-image: url('/images/court.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
