--- a/styles/layouts.css
+++ b/styles/layouts.css
@@ -9,7 +9,7 @@
   inset: 0;
   padding: 0.5vw;
   box-sizing: border-box;
-  background-color: #000000;
+  background-color: #121212;
 }
 
 .screen-content {
@@ -191,7 +191,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url('/images/court.png');
+  background-image: url('/images/court.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
